fixtures/errors/define_property_accessor_non_callable.js
var obj = {};
Object.defineProperty(obj, "x", { get: 1 });
